--- a/views/user/contact-us.ejs
+++ b/views/user/contact-us.ejs
@@ -80,8 +80,8 @@
 
         try {
             await emailjs.send(
-                "service_arv22cm",   // ✅ Service ID
-                "template_09vg5ar",  // ✅ Template ID
+                "service_arv22cm",   
+                "template_09vg5ar", 
                 templateParams
             );
 
