--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -35,6 +35,7 @@
    <!-- Include SweetAlert CSS and JS files from CDN -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10.16.6/dist/sweetalert2.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
