--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -184,7 +184,7 @@
                                     <div class="product-cart-wrap mb-30">
                                         <div class="product-img-action-wrap">
                                             <div class="product-img product-img-zoom fixed-img-box">
-                                                <a href="/productDetails?id=<%=products[i].id%>">
+                                                <a href="/productDetails?id=<%=products[i]._id%>">
                                                     <img class="default-img"
                                                         src="/uploads/product-images/<%=products[i].productImage[0]%>" alt="">
                                                     
